--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,23 +1,10 @@
 <%- include('partials/header') -%>
 <!-- The login section is for users to login to their accounts, the create user input fields are for creating new users, once the user logs in the login screen will be hidden-->
-<section class="login">
-  <!-- <img id="login-image" src="/images/login-image.png" /> -->
+<section class="main-page">
   <h1>
     A Bank by the <span class="highlight">People</span><br />
     for the <span class="highlight">People</span>
   </h1>
-  <div class="log-user">
-    <form action="/" method="POST">
-      <h2>Login</h2>
-      <label for="username"><h3>Client Username</h3></label>
-      <input name="username" />
-      <label for="password"><h3>Password</h3></label>
-      <input type="password" name="password" />
-      <button type="submit" id="login-submit">
-        <i class="fa-solid fa-arrow-up-right-from-square"></i>
-      </button>
-    </form>
-  </div>
 </section>
 <div class="connector">
   <h4>
