--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,9 +3,9 @@
 </body>
 <div class="seperator"></div>
 <footer>
-    <h2 id="register">
+    <button id="register-footer">
         <a href="/register">Create a new Account now!</a>
-      </h2>
+    </button>
     <ul id="footer-list">
         <li>Economics</li>
         <li>Apply Online</li>
