--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,10 +29,15 @@ body {
 
 /* NAVBAR */
 .nav {
+  position: fixed;
+  top: 0;
   display: flex;
   justify-content: flex-end;
-  background-color: var(--white);
+  background-color: rgba(255, 255, 255, 0.606);
   padding: 0.5rem;
+  width: 100%;
+  height: 3vh;
+  z-index: 100;
 }
 #logo {
   font-size: 40px;
@@ -61,7 +66,6 @@ body {
 .navbar a:hover {
   color: var(--secondary-bg);
 }
-
 /* CSS for the drop down menu */
 
 .dropdown {
@@ -83,7 +87,7 @@ body {
   pointer-events: auto;
 }
 .login-link {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0);
   padding: 0.5rem;
   font-size: 1.5rem;
   border: none;
@@ -154,16 +158,17 @@ body {
 
 /* Main heading and title */
 .main-page {
-  margin-top: 10rem;
   display: flex;
-  flex-direction: row;
-  gap: 10px;
-  justify-content: flex-end;
-  background-color: var(--white);
-  padding: 0.15rem;
-  text-align: center;
+  margin-top: 5rem;
   align-items: center;
-  height: 30vh;
+  justify-content: center;
+  flex-direction: column;
+  z-index: 0;
+  background-color: var(--white);
+  text-align: center;
+  padding: 0.15rem;
+  height: 95vh;
+  width: 100vw;
 }
 /* This is used to highlight the "PEOPLE"  */
 .highlight {
@@ -184,28 +189,14 @@ body {
 }
 
 .main-page h1 {
-  position: absolute;
-  margin-top: 10rem;
-  margin-right: 40vw;
   color: var(--font);
   font-size: 3.5rem;
   line-height: 1.2;
   font-family: "Comfortaa", cursive;
+  transform: translateY(-3rem);
 }
-
-/* CONNECTOR IS JUST TO ADD SOME LENGTH TO THE PAGE  */
-.connector {
-  width: 100vw;
-  height: 55vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  text-align: center;
-  z-index: 0;
-}
-.connector h4 {
-  margin-top: 15rem;
+.main-page h4 {
+  transform: translateY(15rem);
   width: 50vw;
   font-family: "Comfortaa", cursive;
   font-size: 1rem;
@@ -213,7 +204,6 @@ body {
 #products-services {
   margin-top: 1rem;
 }
-
 /* SERVICES  */
 
 .special {
@@ -222,7 +212,7 @@ body {
 .services {
   height: 100vh;
   width: 100vw;
-  background-color: var(--white);
+  background-color: var(--font);
   display: grid;
   grid-template-columns: auto auto;
   align-items: center;
@@ -275,11 +265,11 @@ body {
   font-family: "Comfortaa", cursive;
 }
 .tabs-title {
-  max-width: 80rem;
-  margin: 0.25rem auto 5rem auto;
+  width: 100vw;
+  margin: 2rem auto 5rem 2rem;
 }
 .tabs-description {
-  font-size: 1.8rem;
+  font-size: 1.4rem;
   margin-top: 0.5rem;
   font-weight: 600;
   text-transform: uppercase;
@@ -288,14 +278,14 @@ body {
   color: var(--secondary-bg);
 }
 .tabs-header {
-  font-size: 3rem;
+  font-size: 2.5rem;
   line-height: 1.3;
   font-weight: 500;
 }
 .tabs button {
   display: inline-block;
   background-color: var(-);
-  font-size: 1.6rem;
+  font-size: 1.2rem;
   font-family: inherit;
   font-weight: 500;
   border: none;
@@ -310,7 +300,7 @@ body {
 .tabs button--text {
   display: inline-block;
   background: none;
-  font-size: 1.7rem;
+  font-size: 1.2rem;
   font-family: inherit;
   font-weight: 500;
   color: var(--color-primary);
@@ -323,7 +313,6 @@ body {
 .operations {
   max-width: 100vw;
   margin: 12rem auto 0 auto;
-
   background-color: #fff;
 }
 .operations__tab-container {
@@ -376,8 +365,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 7rem;
-  width: 7rem;
+  height: 5rem;
+  width: 5rem;
   border-radius: 50%;
 }
 
