--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,35 +15,38 @@
   </head>
   <body>
     <!--The navbar will remain same, it will be carried out to the user account page-->
-    <section class="nav">
-      <div id="logo">
-        <i class="fa-solid fa-people-roof"></i>
-      </div>
-      <nav class="navbar">
-        <h2 id="home"><a href="/">Home</a></h2>
-        <h2 id="about"><a href="/about">About</a></h2>
-        <h2 id="contact"><a href="/contact">Contact</a></h2>
-        <h2 id="testimonials"><a href="/testimonials">Testimonials</a></h2>
-        <div class="dropdown" data-dropdown="">
-          <button class="login-link" data-dropdown-button>Login</button>
-          <div class="dropdown-menu">
-            <div class="log-user">
-              <form action="/" method="POST">
-                <label for="username"><h3>Client Username</h3></label>
-                <input name="username" />
-                <label for="password"><h3>Password</h3></label>
-                <input type="password" name="password" />
-                <button type="submit" id="login-submit">
-                  <i class="fa-solid fa-arrow-up-right-from-square"></i> Submit
+    <header class="header">
+      <section class="nav">
+        <div id="logo">
+          <i class="fa-solid fa-people-roof"></i>
+        </div>
+        <nav class="navbar">
+          <h2 id="home"><a href="/">Home</a></h2>
+          <h2 id="about"><a href="/about">About</a></h2>
+          <h2 id="contact"><a href="/contact">Contact</a></h2>
+          <h2 id="testimonials"><a href="/testimonials">Testimonials</a></h2>
+          <div class="dropdown" data-dropdown="">
+            <button class="login-link" data-dropdown-button>Login</button>
+            <div class="dropdown-menu">
+              <div class="log-user">
+                <form action="/" method="POST">
+                  <label for="username"><h3>Client Username</h3></label>
+                  <input name="username" />
+                  <label for="password"><h3>Password</h3></label>
+                  <input type="password" name="password" />
+                  <button type="submit" id="login-submit">
+                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    Submit
+                  </button>
+                </form>
+                <button id="register">
+                  <a href="/register">New User? Register</a>
                 </button>
-              </form>
-              <button id="register">
-                <a href="/register">New User? Register</a>
-              </button>
+              </div>
             </div>
           </div>
-        </div>
-      </nav>
-    </section>
+        </nav>
+      </section>
+    </header>
   </body>
 </html>
