Added mobile support

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,6 +20,9 @@
         <div id="logo">
           <i class="fa-solid fa-people-roof"></i>
         </div>
+        <button class="toggle-button">
+          <i class="fa-solid fa-bars"></i>
+        </button>
         <nav class="navbar">
           <h2 id="home"><a href="/">Home</a></h2>
           <h2 id="about"><a href="/about">About</a></h2>
