--- a/views/testimonials.ejs
+++ b/views/testimonials.ejs
@@ -1,66 +1,125 @@
 <%- include('partials/header') -%>
-  <!-- The testimonials section will have the reviews that customers left for us. We can have a form for that on the dashboard so the logged in users can submit reviews-->
-  <section class="testimonials">
+<!-- The testimonials section will have the reviews that customers left for us. We can have a form for that on the dashboard so the logged in users can submit reviews-->
+<section class="testimonials">
+  <!-- Slide show container -->
+  <div class="container__div_slideshow">
+    <div class="slides1 fade">
+      <div class="card__div_testimonial card__slides1">
+        <figure class="card__figure">
+          <img
+            class="card__img"
+            src="/images/UserImgPlaceHolder.png"
+            alt="User profile picture"
+            width="75px"
+            height="75px"
+          />
+        </figure>
 
-    <!-- Slide show container -->
-    <div class="container__div_slideshow">
-      <div class="slides1 fade">
-        <div class="card__div_testimonial card__slides1">
-          <figure class="card__figure">
-            <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
-          </figure>
-
-          <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
-          <p class="card__p_author">- Eilene Hall</p>
-        </div>
-
-        <div class="card__div_testimonial card__slides1">
-          <figure class="card__figure">
-            <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
-          </figure>
-
-          <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
-          <p class="card__p_author">- Angela Hill</p>
-        </div>
-
-        <div class="card__div_testimonial card__slides1">
-          <figure class="card__figure">
-            <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
-          </figure>
-
-          <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
-          <p class="card__p_author">- Rod Holt</p>
-        </div>
+        <q class="card__q_quote"
+          >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque
+          expedita officiis architecto quod recusandae provident dolorum sequi
+          ipsam.</q
+        >
+        <p class="card__p_author">- Eilene Hall</p>
       </div>
 
-      <div class="slides1 fade">  
-        <div class="card__div_testimonial card__slides1">
-          <figure class="card__figure">
-            <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
-          </figure>
+      <div class="card__div_testimonial card__slides1">
+        <figure class="card__figure">
+          <img
+            class="card__img"
+            src="/images/UserImgPlaceHolder.png"
+            alt="User profile picture"
+            width="75px"
+            height="75px"
+          />
+        </figure>
 
-          <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
-          <p class="card__p_author">- Gene Passman</p>
-        </div>
+        <q class="card__q_quote"
+          >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque
+          expedita officiis architecto quod recusandae provident dolorum sequi
+          ipsam.</q
+        >
+        <p class="card__p_author">- Angela Hill</p>
+      </div>
 
-        <div class="card__div_testimonial card__slides1">
-          <figure class="card__figure">
-            <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
-          </figure>
+      <div class="card__div_testimonial card__slides1">
+        <figure class="card__figure">
+          <img
+            class="card__img"
+            src="/images/UserImgPlaceHolder.png"
+            alt="User profile picture"
+            width="75px"
+            height="75px"
+          />
+        </figure>
 
-          <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
-          <p class="card__p_author">- Craig Sloan</p>
-        </div>
-
-        <div class="card__div_testimonial card__slides1">
-          <figure class="card__figure">
-            <img class="card__img" src="/images/UserImgPlaceHolder.png" alt="User profile picture" width="75px" height="75px">
-          </figure>
-
-          <q class="card__q_quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque expedita officiis architecto quod recusandae provident dolorum sequi ipsam.</q>
-          <p class="card__p_author">- Faith Gonzalez</p>
-        </div>
+        <q class="card__q_quote"
+          >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque
+          expedita officiis architecto quod recusandae provident dolorum sequi
+          ipsam.</q
+        >
+        <p class="card__p_author">- Rod Holt</p>
       </div>
     </div>
-  </section>
+
+    <div class="slides1 fade">
+      <div class="card__div_testimonial card__slides1">
+        <figure class="card__figure">
+          <img
+            class="card__img"
+            src="/images/UserImgPlaceHolder.png"
+            alt="User profile picture"
+            width="75px"
+            height="75px"
+          />
+        </figure>
+
+        <q class="card__q_quote"
+          >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque
+          expedita officiis architecto quod recusandae provident dolorum sequi
+          ipsam.</q
+        >
+        <p class="card__p_author">- Gene Passman</p>
+      </div>
+
+      <div class="card__div_testimonial card__slides1">
+        <figure class="card__figure">
+          <img
+            class="card__img"
+            src="/images/UserImgPlaceHolder.png"
+            alt="User profile picture"
+            width="75px"
+            height="75px"
+          />
+        </figure>
+
+        <q class="card__q_quote"
+          >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque
+          expedita officiis architecto quod recusandae provident dolorum sequi
+          ipsam.</q
+        >
+        <p class="card__p_author">- Craig Sloan</p>
+      </div>
+
+      <div class="card__div_testimonial card__slides1">
+        <figure class="card__figure">
+          <img
+            class="card__img"
+            src="/images/UserImgPlaceHolder.png"
+            alt="User profile picture"
+            width="75px"
+            height="75px"
+          />
+        </figure>
+
+        <q class="card__q_quote"
+          >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum atque
+          expedita officiis architecto quod recusandae provident dolorum sequi
+          ipsam.</q
+        >
+        <p class="card__p_author">- Faith Gonzalez</p>
+      </div>
+    </div>
+  </div>
+</section>
 <%- include('partials/footer') -%>
