--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,14 +19,15 @@
 * {
   margin: 0;
   padding: 0;
+  max-width: 100%;
 }
 
+html,
 body {
   background-color: var(--white);
   color: var(--font);
   overflow-x: hidden;
 }
-
 /* NAVBAR */
 .nav {
   position: fixed;
@@ -36,14 +37,16 @@ body {
   background-color: rgba(255, 255, 255, 0.606);
   padding: 0.5rem;
   width: 100%;
-  height: 3vh;
+  height: 5vh;
   z-index: 100;
 }
 #logo {
   font-size: 40px;
   display: flex;
   justify-content: flex-start;
+  align-items: center;
   width: 47vw;
+  margin-right: 12rem;
   color: var(--font);
 }
 .navbar {
@@ -71,11 +74,11 @@ body {
 .dropdown {
   position: relative;
   margin-right: 2rem;
+  width: 10rem;
 }
 .dropdown-menu {
   position: absolute;
   top: 2.25rem;
-  right: -3rem;
   opacity: 0;
   pointer-events: none;
   transform: translateY(-1rem);
@@ -154,6 +157,9 @@ body {
 }
 #login-submit:hover {
   background-color: var(--secondary-bg);
+}
+.toggle-button {
+  display: none;
 }
 
 /* Main heading and title */
@@ -454,4 +460,76 @@ footer #register-footer a {
 #register-footer:hover {
   background-color: var(--white);
   color: var(--font);
+}
+
+@media (max-width: 1000px) {
+  .nav {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    align-items: flex-end;
+  }
+  .navbar {
+    display: none;
+  }
+  .navbar.active {
+    display: flex;
+    font-size: smaller;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.157);
+    margin-bottom: -4rem;
+  }
+  .main-page h1 {
+    font-size: 3rem;
+  }
+  .toggle-button {
+    background-color: transparent;
+    transition: 500ms;
+    margin-right: 1rem;
+    display: flex;
+    font-size: 2rem;
+    border: none;
+    color: var(--secondary-bg);
+  }
+  .login-link {
+    font-size: 1.4rem;
+    color: var(--font);
+  }
+  #logo {
+    display: none;
+  }
+  .dropdown {
+    right: -6vw;
+  }
+  .main-page h4 {
+    transform: translateY(0rem);
+    width: 50vw;
+    font-family: "Comfortaa", cursive;
+    font-size: 0.8rem;
+  }
+  #products-services {
+    margin-top: 1rem;
+  }
+  .tabs button {
+    font-size: 0.9rem;
+    padding: 0.5rem;
+  }
+  .tabs-description {
+    font-size: 1rem;
+  }
+  .tabs-header {
+    font-size: 2rem;
+    margin-bottom: -5rem;
+  }
+  .operations__content {
+    font-size: smaller;
+  }
+  #footer-list {
+    font-size: smaller;
+    margin-right: 3rem;
+    width: 80vw;
+  }
 }
