Separate script files per page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -117,7 +117,5 @@
     </div>
   </div>
 </section>
-
-    <%- include('partials/footer') -%>
-  </div>
-</section>
+<script src="js/scripts_testimonials.js"></script>
+<%- include('partials/footer') -%>
