--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,4 @@
-<script src="js/script.js" async defer></script>
-<script src="js/testimonials.js"></script>
+<script src="js/scripts_heading.js" async defer></script>
 </body>
 <div class="seperator"></div>
 <footer>
