--- a/views/testimonials.ejs
+++ b/views/testimonials.ejs
@@ -1,4 +1,5 @@
 <%- include('partials/header') -%>
+<link rel="stylesheet" href="css/testimonials.css" />
 <!-- The testimonials section will have the reviews that customers left for us. We can have a form for that on the dashboard so the logged in users can submit reviews-->
 <section class="testimonials">
   <!-- Slide show container -->
@@ -122,4 +123,5 @@
     </div>
   </div>
 </section>
+<script src="js/scripts_testimonials.js"></script>
 <%- include('partials/footer') -%>
