--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/style.css" />
-    
+
     <script
       src="https://kit.fontawesome.com/abe9c54cc4.js"
       crossorigin="anonymous"
@@ -34,9 +34,9 @@
               <div class="log-user">
                 <form action="/" method="POST">
                   <label for="username"><h3>Client Username</h3></label>
-                  <input name="username" />
+                  <input type="text" id="login-username" name="username" />
                   <label for="password"><h3>Password</h3></label>
-                  <input type="password" name="password" />
+                  <input id="login-password" type="password" name="password" />
                   <button type="submit" id="login-submit">
                     <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     Submit
