Added logic to display transactions

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -10,11 +10,8 @@
   </div>
 
   <div class="movements">
-    <div class="transactions"></div>
-    <div class="widgets">
-      <div class="transfer"></div>
-      <div class="loan"></div>
-      <div class="credit-score"></div>
+    <div class="transactions-container">
+      <div class="transaction">$500</div>
     </div>
   </div>
 </section>
