--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -40,7 +40,7 @@ h1 {
 
 .movements {
   background-color: var(--secondary-bg);
-  border-radius: 20px;
+  border-radius: 8px;
   padding: 10px;
   max-width: 60vw;
   height: 50vh;
@@ -50,36 +50,23 @@ h1 {
   justify-content: center;
   gap: 1rem;
 }
-.widgets {
-  height: 50vh;
+.transactions-container {
   display: flex;
+  padding-left: 5px;
   flex-direction: column;
-  justify-content: space-evenly;
-}
-
-.transactions {
-  background-color: var(--white);
-  width: 20rem;
-  border-radius: 20px;
+  width: 20vw;
   height: 50vh;
+  justify-content: flex-start;
+  background-color: var(--background);
+  border-radius: 5px;
 }
-.transfer {
-  background-color: var(--white);
-  width: 20rem;
-  border-radius: 20px;
-  height: 15vh;
-}
-.loan {
-  background-color: var(--white);
 
-  border-radius: 20px;
-  width: 20rem;
-  height: 15vh;
-}
-.credit-score {
-  background-color: var(--white);
-
-  border-radius: 20px;
-  width: 20rem;
-  height: 15vh;
+.transaction {
+  margin-top: 10px;
+  border: var(--background) 2px solid;
+  color: var(--white);
+  width: 18rem;
+  display: flex;
+  align-items: center;
+  height: 2rem;
 }
