Added functionality for user data to display

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -3,15 +3,15 @@
 <script src="js/scripts_dashboard.js" async defer></script>
 <link rel="stylesheet" href="css/dashboard.css" />
 <section class="dashboard">
-  <h1 id="greeting">Welcome back!</h1>
+  <h1 id="greeting"></h1>
   <div class="balance">
-    <h2>Current Balance</h2>
-    <h1 class="current-balance">$25000</h1>
+    <h2></h2>
+    <h1 class="current-balance"></h1>
   </div>
 
   <div class="movements">
     <div class="transactions-container">
-      <div class="transaction">$500</div>
+      <div class="transaction"></div>
     </div>
   </div>
 </section>
