--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -11,7 +11,10 @@
 
   <div class="movements">
     <div class="transactions-container">
-      <div class="transaction"></div>
+      <div class="transactions">
+        <div class="transaction-number">1</div>
+        <div class="transaction">5</div>
+      </div>
     </div>
   </div>
 </section>
