About us page - First Commit

--- a/views/About.ejs
+++ b/views/About.ejs
@@ -1,6 +1,54 @@
 <%- include('partials/header') -%>
+<link rel="stylesheet" href="css/aboutUs.css">
   <!-- The about us section will have a description about the team and a map-->
-  <section class="about">
-
+  <section class="dark-bg">
+    <h1>About Us</h1>
+    <p>We’ve been helping our customers make their goals a reality for over 50 years, and now we’re working with them to redesign banking for the future.</p>
   </section>
+  <section class="about-features">
+      <h1>A few things we are proud of...</h1>
+      <ul class="about-carousel">
+        <li class="about-card hidden_prev">
+          <img src="" alt="">
+          <h2>Supporting Communities</h2>
+          <p>We put people first. That’s why we like to help our local communities, through volunteering and partnerships.</p>
+          <button class="read-more">Read more</button>
+        </li>
+        <li class="about-card prev">
+          <img src="" alt="">
+          <h2>Sustainability</h2>
+          <p>Protecting the environment is the responsibility of all of us – and we take active steps to minimise our impact.</p>
+          <button class="read-more">Read more</button>
+        </li>
+        <li class="about-card act">
+          <img src="" alt="">
+          <h2>Accessibility and inclusion</h2>
+          <p>Learn about how you can access our ATMs and other banking services.</p>
+          <button class="read-more">Read more</button>
+        </li>
+        <li class="about-card next">
+          <img src="" alt="">
+          <h2>Diversity, equity and inclusion</h2>
+          <p>We are committed to becoming an organization that proudly represents the diversity of all communities.</p>
+          <button class="read-more">Read more</button>
+        </li>
+        <li class="about-card hidden_next">
+          <img src="" alt="">
+          <h2>Lorem ipsum dolor</h2>
+          <p>consectetur adipiscing elit. Sed eu lobortis ipsum. Nulla consectetur in ligula nec lacinia. Cras a mauris sit amet tellus. </p>
+          <button class="read-more">Read more</button>
+        </li>
+      </ul>
+  </section>
+  <section class="dark-bg">
+    <h1>Our history</h1>
+    <p>In 1847, at 7pm on Saturday 5 June the Savings Bank.</p>
+    <img src="" alt="">
+  </section>
+  <section class="join-team">
+    <h1>Want to join a great team?</h1>
+    <p>We’re always on the hunt for talented people who share our passion for helping our customers achieve their goals.</p>
+    <button>Apply now</button>
+  </section>
+  <script src="js/scripts_about.js"></script>
 <%- include('partials/footer') -%>
