--- a/public/css/aboutUs.css
+++ b/public/css/aboutUs.css
@@ -46,10 +46,24 @@ color: var(--secondary-bg);
 
 p {
     font-size: 1.2rem;
+    margin-bottom: 15px;
+}
+
+button {
+    background-color: var(--color-primary);
+    padding: 0.5rem 1rem;
+    border: 0px solid;
+    cursor: pointer;
+}
+
+button a {
+    text-decoration: none;
+    color: inherit;
 }
 
 section{
     padding: 5rem;
+    text-align: center;
 }
 
 .dark-bg {
@@ -59,7 +73,7 @@ section{
 
 .about-features {
     position: relative;
-    height: 500px;
+    height: 600px;
 }
 
 .about-carousel {
@@ -74,11 +88,11 @@ section{
     list-style-type: none;
     opacity: .25;
     position: absolute;
-    min-width: 400px;
+    min-width: 350px;
     max-width: 800px;
     min-height: 300px;
     left: 50%;
-    margin-left: -230px;
+    margin-left: -210px;
     border-radius: 2px;
     transition: transform 1s, opacity 1s;
     background-color: var(--secondary-bg);
@@ -89,6 +103,11 @@ section{
 .about-carousel h2 {
     color: var(--white);
     margin-bottom: 1rem;
+}
+
+.about-carousel img {
+    height: 200px;
+    margin-bottom: 20px;
 }
 
 .about-carousel .prev *, .about-carousel .next * {
@@ -134,4 +153,18 @@ section{
 
 .about-carousel .hide {
     display: none;
+}
+
+.history {
+    position: relative;
+    display: flex;
+    text-align: left;
+}
+
+.side-text {
+    margin-right: 40px;
+}
+
+.side-picture {
+    height: 300px;
 }
