--- a/views/About.ejs
+++ b/views/About.ejs
@@ -4,51 +4,54 @@
   <section class="dark-bg">
     <h1>About Us</h1>
     <p>We’ve been helping our customers make their goals a reality for over 50 years, and now we’re working with them to redesign banking for the future.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </section>
   <section class="about-features">
       <h1>A few things we are proud of...</h1>
       <ul class="about-carousel">
         <li class="about-card hidden_prev">
-          <img src="" alt="">
+          <img src="https://images.squarespace-cdn.com/content/v1/595ab8602e69cfe147171d1b/1501820988859-D8LM284OVXF0YSOEE0X4/community-group.jpg?format=2500w" alt="People toghether">
           <h2>Supporting Communities</h2>
           <p>We put people first. That’s why we like to help our local communities, through volunteering and partnerships.</p>
           <button class="read-more">Read more</button>
         </li>
         <li class="about-card prev">
-          <img src="" alt="">
+          <img src="https://imageio.forbes.com/specials-images/imageserve/1151803694/Environment-concept/960x0.jpg?fit=bounds&format=jpg&width=960" alt="Sustainability image">
           <h2>Sustainability</h2>
           <p>Protecting the environment is the responsibility of all of us – and we take active steps to minimise our impact.</p>
           <button class="read-more">Read more</button>
         </li>
         <li class="about-card act">
-          <img src="" alt="">
-          <h2>Accessibility and inclusion</h2>
+          <img src="https://d117h1jjiq768j.cloudfront.net/images/default-source/blogs/2018/2018-05/web-accessibility-101-the-basics_870x450.jpg?sfvrsn=d14804d8_3" alt="Accessibility Image">
+          <h2>Accessibility</h2>
           <p>Learn about how you can access our ATMs and other banking services.</p>
           <button class="read-more">Read more</button>
         </li>
         <li class="about-card next">
-          <img src="" alt="">
+          <img src="https://www.hrzone.com/sites/default/files/istock-1152125129.jpg" alt="Inclusion Image">
           <h2>Diversity, equity and inclusion</h2>
           <p>We are committed to becoming an organization that proudly represents the diversity of all communities.</p>
           <button class="read-more">Read more</button>
         </li>
         <li class="about-card hidden_next">
-          <img src="" alt="">
+          <img src="https://cf.ltkcdn.net/family/images/orig/258550-2121x1414-Extended_Family_African_American.jpg" alt="Family Smiling">
           <h2>Lorem ipsum dolor</h2>
           <p>consectetur adipiscing elit. Sed eu lobortis ipsum. Nulla consectetur in ligula nec lacinia. Cras a mauris sit amet tellus. </p>
           <button class="read-more">Read more</button>
         </li>
       </ul>
   </section>
-  <section class="dark-bg">
-    <h1>Our history</h1>
-    <p>In 1847, at 7pm on Saturday 5 June the Savings Bank.</p>
-    <img src="" alt="">
+  <section class="dark-bg history">
+    <div class="side-text">
+      <h1>Our history</h1>
+      <p>In 1847, at 7pm on Saturday 5 June the Savings Bank. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+    <img class="side-picture" src="https://images.mansionglobal.com/im-498559?width=700&height=517" alt="Historic building">
   </section>
   <section class="join-team">
     <h1>Want to join a great team?</h1>
     <p>We’re always on the hunt for talented people who share our passion for helping our customers achieve their goals.</p>
-    <button>Apply now</button>
+    <button><a href="/contact">Apply now</a></button>
   </section>
   <script src="js/scripts_about.js"></script>
 <%- include('partials/footer') -%>
