--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,7 +33,7 @@
             <div class="dropdown-menu">
               <div class="log-user">
                 <form action="/" method="POST">
-                  <label for="username"><h3>Client Username</h3></label>
+                  <label for="username"><h3>Username</h3></label>
                   <input type="text" id="login-username" name="username" />
                   <label for="password"><h3>Password</h3></label>
                   <input id="login-password" type="password" name="password" />
