Updated register page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -117,5 +117,5 @@
     </div>
   </div>
 </section>
-<script src="js/scripts_testimonials.js"></script>
+<script src="js/scripts_landpage.js"></script>
 <%- include('partials/footer') -%>
