--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,7 +3,7 @@
 <div class="seperator"></div>
 <footer>
     <button id="register-footer">
-        <a href="/register">Create a new Account now!</a>
+        <a href="/contact">Create a new Account now!</a>
     </button>
     <ul id="footer-list">
         <li>Economics</li>
