--- a/public/css/aboutUs.css
+++ b/public/css/aboutUs.css
@@ -1,129 +1,131 @@
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap");
 :root {
-    --background: #201e1f;
-    --secondary-bg: #5cd384;
-    --font: #403f4c;
-    --white: #ffffff;
-    --gradient-primary: linear-gradient(to top left, #39b385, #9be15d);
-    --color-primary: #5ec576;
-    --color-secondary: #ffcb03;
-    --color-tertiary: #ff585f;
-    --color-primary-darker: #4bbb7d;
-    --color-secondary-darker: #ffbb00;
-    --color-tertiary-darker: #fd424b;
-    --color-primary-opacity: #5ec5763a;
-    --color-secondary-opacity: #ffcd0331;
-    --color-tertiary-opacity: #ff58602d;
+  --background: #201e1f;
+  --secondary-bg: #5cd384;
+  --font: #403f4c;
+  --white: #ffffff;
+  --gradient-primary: linear-gradient(to top left, #39b385, #9be15d);
+  --color-primary: #5ec576;
+  --color-secondary: #ffcb03;
+  --color-tertiary: #ff585f;
+  --color-primary-darker: #4bbb7d;
+  --color-secondary-darker: #ffbb00;
+  --color-tertiary-darker: #fd424b;
+  --color-primary-opacity: #5ec5763a;
+  --color-secondary-opacity: #ffcd0331;
+  --color-tertiary-opacity: #ff58602d;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    max-width: 100%;
-    font-family: "Comfortaa", cursive;
+  margin: 0;
+  padding: 0;
+  max-width: 100%;
+  font-family: "Comfortaa", cursive;
 }
 
-html, body {
+html,
+body {
   background-color: var(--white);
   color: var(--font);
   overflow-x: hidden;
 }
 
-h1 {
-    font-size: 2.5rem;
-    line-height: 1.3;
-    font-weight: 500;
-    margin-bottom: 2rem;
+.about-features h1 {
+  font-size: 2.5rem;
+  line-height: 1.3;
+  font-weight: 500;
+  margin-bottom: 2rem;
 }
 
-h2 {
-font-size: 1.4rem;
-font-weight: 600;
-text-transform: uppercase;
-color: var(--color-primary);
-color: var(--secondary-bg);
+.about-features h2 {
+  font-size: 1.4rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: var(--color-primary);
+  color: var(--secondary-bg);
 }
 
 p {
-    font-size: 1.2rem;
-    margin-bottom: 15px;
+  font-size: 1.2rem;
+  margin-bottom: 15px;
 }
 
 button {
-    background-color: var(--color-primary);
-    padding: 0.5rem 1rem;
-    border: 0px solid;
-    cursor: pointer;
+  background-color: var(--color-primary);
+  padding: 0.5rem 1rem;
+  border: 0px solid;
+  cursor: pointer;
 }
 
 button a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
-section{
-    padding: 5rem;
-    text-align: center;
+section {
+  padding: 5rem;
+  text-align: center;
 }
 
 .dark-bg {
-    background-color: var(--background);
-    color: var(--white);
+  background-color: var(--background);
+  color: var(--white);
 }
 
 .about-features {
-    position: relative;
-    height: 600px;
+  position: relative;
+  height: 600px;
 }
 
 .about-carousel {
-    height: 300px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%)
+  height: 300px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .about-carousel li {
-    list-style-type: none;
-    opacity: .25;
-    position: absolute;
-    min-width: 350px;
-    max-width: 800px;
-    min-height: 300px;
-    left: 50%;
-    margin-left: -210px;
-    border-radius: 2px;
-    transition: transform 1s, opacity 1s;
-    background-color: var(--secondary-bg);
-    padding: 2rem;
-    text-align: center;
+  list-style-type: none;
+  opacity: 0.25;
+  position: absolute;
+  min-width: 350px;
+  max-width: 800px;
+  min-height: 300px;
+  left: 50%;
+  margin-left: -210px;
+  border-radius: 2px;
+  transition: transform 1s, opacity 1s;
+  background-color: var(--secondary-bg);
+  padding: 2rem;
+  text-align: center;
 }
 
 .about-carousel h2 {
-    color: var(--white);
-    margin-bottom: 1rem;
+  color: var(--white);
+  margin-bottom: 1rem;
 }
 
 .about-carousel img {
-    height: 200px;
-    margin-bottom: 20px;
+  height: 200px;
+  margin-bottom: 20px;
 }
 
-.about-carousel .prev *, .about-carousel .next * {
-    pointer-events:none
+.about-carousel .prev *,
+.about-carousel .next * {
+  pointer-events: none;
 }
 
 .about-carousel button {
-    background-color: var(--white);
-    padding: 0.5rem 1rem;
-    border: 0px solid;
-    margin: 1rem;
+  background-color: var(--white);
+  padding: 0.5rem 1rem;
+  border: 0px solid;
+  margin: 1rem;
 }
 
 .about-carousel .act {
-    opacity: 1;
-    z-index: 10;
+  opacity: 1;
+  z-index: 10;
 }
 
 .about-carousel .prev,
@@ -132,39 +134,39 @@ section{
 }
 
 .about-carousel .prev {
-    transform: translateX(-300px) scale(.75);
+  transform: translateX(-300px) scale(0.75);
 }
 
 .about-carousel .next {
-    transform: translateX(300px) scale(.75);
+  transform: translateX(300px) scale(0.75);
 }
 
 .about-carousel .hidden_prev {
-    transform: translateX(-420px) scale(.5);
-    opacity: 0;
-    transition: opacity .5s, transform .5s;
+  transform: translateX(-420px) scale(0.5);
+  opacity: 0;
+  transition: opacity 0.5s, transform 0.5s;
 }
 
 .about-carousel .hidden_next {
-    transform: translateX(420px) scale(.5);
-    opacity: 0;
-    transition: opacity .5s, transform .5s;
+  transform: translateX(420px) scale(0.5);
+  opacity: 0;
+  transition: opacity 0.5s, transform 0.5s;
 }
 
 .about-carousel .hide {
-    display: none;
+  display: none;
 }
 
 .history {
-    position: relative;
-    display: flex;
-    text-align: left;
+  position: relative;
+  display: flex;
+  text-align: left;
 }
 
 .side-text {
-    margin-right: 40px;
+  margin-right: 40px;
 }
 
 .side-picture {
-    height: 300px;
+  height: 300px;
 }
